--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
-    "compilerOptions": {
-        "declaration": true,
-        "declarationDir": "ts",
-        "outDir": "js",
-        "moduleResolution": "node",
-        "target": "es6",
-        "types": [
-            "@types/node"
-        ]
-    }
+  "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "ts",
+    "outDir": "js",
+    "moduleResolution": "node",
+    "target": "es6",
+    "types": ["@types/node"]
+  }
 }
